--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -1,5 +1,5 @@
 <!-- page: CONTACT -->
-<section id="contact">
+<section id="contact" ng-cloack>
 	
 
 	<div class="l-subsection"style="background-image:url(img/placeholder/parallax.png);">
@@ -96,7 +96,7 @@
 
 <!-- page: ABOUT -->
 
-<section id="about">
+<section id="about" ng-cloack>
 	
 
 	<div class="l-subsection color_alternate">
