--- a/app/partials/archive.html
+++ b/app/partials/archive.html
@@ -5,10 +5,42 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
-				<p class="subtitle">Who we are?</p>
-				<h2 class="highlight"><strong>We are CORSA</strong></h2>
+				<p class="subtitle">L'association Faites de la Musique</p>
+				<h2 class="highlight"><strong>Lorem ipsum dolor </strong></h2>
 				
-				<p class="size_big">This is our dedicated team who work day-in and day-out together to bring our clients<br>the most amazing projects for a digitally connected world.</p>
+				<p class="size_big">Tandis que la Fdlm Team finit le démontage et le rangement de nos installations, nous nous retournons déjà avec une fierté mêlée de nostalgie sur ce week-end magique qui s'achève.<br>
+				Merci aux 600 participants qui ont honoré Malegoude de leur bonne humeur.<br>
+				Gratitude pour le travail impressionnant des 20 bénévoles de l'Asso et l'aide spontanée de nombreux festivaliers.<br>
+				Mille mercis aux groupes et artistes qui ont animé nos deux scènes et réalisé des JAM SESSIONS d'un niveau remarquable jusqu'à l'aube.<br>
+				Mention spéciale pour nos deux sonorisations au dévouement remarquable, Rainbow Spirit, Full Screen Visual, graffeurs ainsi que tous les artistes. Remerciements à la Communauté de Communes de Mirepoix et à tous les partenaires du réseau que nous avons pu tisser pour faire de cette édition 2013 une vraie réussite!<br>
+				Merci !</p>
+				
+
+				<div class="g-hr type_invisible"></div>
+
+
+				<a class="g-btn type_primary size_big" href="#part-2" target="_self"><span>Continuez notre navigation</span></a>
+				
+				
+			</div>
+		</div>
+	</div>
+		
+</section>
+
+<!-- page: OUR TEAM -->
+<section id="part-2" class="l-section">
+	
+	<div class="l-subsection">
+		<div class="l-subsection-h">
+			<div class="l-subsection-hh g-html i-cf">
+			
+				<p class="subtitle">LineUp de 2013?</p>
+				
+				<p class="size_big">Nos styles ... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
 				
 				<div class="g-hr type_invisible"></div>
 				
@@ -181,13 +213,16 @@
 						</div>
 					</div>
 				</div>
-				
+
+				<div class="g-hr type_invisible"></div>
+
+
+				<img src="vieassociative/1043926_622523037760398_534570403_n.jpg">
 			</div>
 		</div>
 	</div>
-		
 </section>
-
 <script type="text/javascript">
 	window.resizeHandler();
+	window.scrollTo(0,0);
 </script>
