--- a/app/partials/artiste.html
+++ b/app/partials/artiste.html
@@ -1,19 +1,189 @@
 
+<!-- page: HOME -->
+<section id="home" class="l-section">
+	
+	<div id="parallax_subsection_0" class="l-subsection color_dark with_parallax" style="background-image:url(img/placeholder/1200x800.gif);">
+		<div class="l-subsection-h">
+			<div class="l-subsection-hh g-html i-cf">
+				<h1 class="home-heading">
+					<span class="home-heading-line bold">Wonderful Digital Things</span>
+					<span class="home-heading-line">and a pinch of creativity</span>
+				</h1>
+				<a class="g-btn type_primary size_big" href="#about"><span>Learn More</span></a>
+			</div>
+		</div>
+	</div>
+
+</section>
 
 <!-- page: ABOUT -->
 <section id="about" class="l-section">
-	<div class="l-subsection" style="background-image: url(img/fdlm/img-4.jpg);">
+	
+	<div class="l-subsection">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
-				<h4><strong>Deux jours de folies</strong></h4>
+				<h2><strong>About CORSA</strong></h2>
 				
-				<a class="g-btn type_primary" href="#contact"><span>Vendredi 14 Juin</span></a>
-				<a class="g-btn type_primary" href="#contact"><span>Samedi 15 Juin</span></a>
+				<div class="g-hr type_short">
+					<span class="g-hr-h">
+						<i class="fa fa-heart"></i>
+					</span>
+				</div>
+				
+				<p class="subtitle">CORSA is an award winning <strong class="highlight">interactive agency</strong><br>working for <strong class="highlight">leading brands</strong> worldwide</p>
+				
+				<div class="g-hr type_invisible"></div>
+				
+				<div class="g-cols">
+					<div class="one-half">
+						<p class="align_left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit nulla mi, ut pellentesque felis fermentum et. Quisque nec est euismod, egestas lorem nec, volutpat nunc. Phasellus neque lectus, convallis non consectetur non, molestie ac enim. Suspendisse et tincidunt urna.</p>
+					</div>
+					<div class="one-half">
+						<p class="align_left">Donec ante justo, scelerisque a iaculis vitae, accumsan nec risus. Integer quis lacinia ligula. Sed id nunc interdum, lobortis arcu sit amet, interdum libero. Integer adipiscing, metus vel molestie tempus, magna tortor adipiscing lorem, accumsan accumsan arcu arcu nec metus.</p>
+					</div>
+				</div>
 				
 			</div>
 		</div>
 	</div>
+
+	<div class="l-subsection color_alternate">
+		<div class="l-subsection-h">
+			<div class="l-subsection-hh g-html i-cf">
+
+				<p class="subtitle">What we do?</p>
+				<h3 class="highlight"><strong>Powerful websites that look beautiful</strong></h3>
+				
+				<div class="g-hr type_invisible"></div>
+				
+				<div class="g-cols">
+					<div class="one-third">
+					
+						<div class="w-iconbox iconpos_top with_circle">
+							<div class="w-iconbox-h">
+								<div class="w-iconbox-link">
+									<div class="w-iconbox-icon">
+										<i class="fa fa-rocket"></i>
+									</div>
+									<h4 class="w-iconbox-title">From Zero to One</h4>
+								</div>
+								<div class="w-iconbox-text">
+									<p>We are moving from zero to one, not from one to hundred. That means we are focused on creating new solutions, not copying the existing ones.</p>
+								</div>
+							</div>
+						</div>
+						
+					</div>
+					<div class="one-third">
+					
+						<div class="w-iconbox iconpos_top with_circle">
+							<div class="w-iconbox-h">
+								<div class="w-iconbox-link">
+									<div class="w-iconbox-icon">
+										<i class="fa fa-thumbs-up"></i>
+									</div>
+									<h4 class="w-iconbox-title">Our Level Up</h4>
+								</div>
+								<div class="w-iconbox-text">
+									<p>Working with us you will work with professional certified designers and engineers having the vast good experience.</p>
+								</div>
+							</div>
+						</div>
+						
+					</div>
+					<div class="one-third">
+					
+						<div class="w-iconbox iconpos_top with_circle">
+							<div class="w-iconbox-h">
+								<div class="w-iconbox-link">
+									<div class="w-iconbox-icon">
+										<i class="fa fa-heart"></i>
+									</div>
+									<h4 class="w-iconbox-title">Your satisfaction</h4>
+								</div>
+								<div class="w-iconbox-text">
+									<p>Creating a design it is not an end in itself, but a means. We understand the rules of the games. It’s about to make you happy.</p>
+								</div>
+							</div>
+						</div>
+						
+					</div>
+				</div>
+				
+				<div class="g-hr type_invisible"></div>
+				
+				<a class="g-btn type_default" href="#portfolio"><span><i class="fa fa-arrow-down"></i>View Works</span></a>
+				
+			</div>
+		</div>
+	</div>
+
+	<div class="l-subsection">
+		<div class="l-subsection-h">
+			<div class="l-subsection-hh g-html i-cf">
+			
+				<h4>How about Some Fun Facts about our agency?</h4>
+				
+				<div class="g-hr type_invisible"></div>
+				
+				<div class="g-cols">
+					<div class="one-fourth">
+					
+						<div class="w-counter">
+							<div class="w-counter-h">
+								<div class="w-counter-number">345</div>
+								<h6 class="w-counter-title">Pizzas ordered</h6>
+							</div>
+						</div>
+						
+					</div>
+					<div class="one-fourth">
+					
+						<div class="w-counter">
+							<div class="w-counter-h">
+								<div class="w-counter-number">87</div>
+								<h6 class="w-counter-title">Clients we've worked with</h6>
+							</div>
+						</div>
+						
+					</div>
+					<div class="one-fourth">
+					
+						<div class="w-counter">
+							<div class="w-counter-h">
+								<div class="w-counter-number">126</div>
+								<h6 class="w-counter-title">Projects completed</h6>
+							</div>
+						</div>
+						
+					</div>
+					<div class="one-fourth">
+					
+						<div class="w-counter">
+							<div class="w-counter-h">
+								<div class="w-counter-number">50</div>
+								<h6 class="w-counter-title">Magazines published</h6>
+							</div>
+						</div>
+						
+					</div>
+				</div>
+				
+			</div>
+		</div>
+	</div>
+	
+	<div id="parallax_subsection_1" class="l-subsection color_dark with_parallax" style="background-image:url(img/placeholder/parallax.png);">
+		<div class="l-subsection-h">
+			<div class="l-subsection-hh g-html i-cf">
+			
+				<h2>CORSA is a <strong>creative studio</strong> dedicated<br>to crafting <strong>meaninful image</strong></h2>
+				
+			</div>
+		</div>
+	</div>
+
 </section>
 
 <!-- page: OUR TEAM -->
@@ -850,6 +1020,17 @@
 		</div>
 	</div>
 	
+	<div class="l-subsection color_alternate">
+		<div class="l-subsection-h">
+			<div class="l-subsection-hh g-html i-cf">
+			
+				<h4><strong>Are you ready to start a conversation?</strong></h4>
+				
+				<a class="g-btn type_primary" href="#contact"><span>Get in touch</span></a>
+				
+			</div>
+		</div>
+	</div>
 	
 	<div id="parallax_subsection_2" class="l-subsection color_dark with_parallax" style="background-image:url(img/placeholder/parallax.png);">
 		<div class="l-subsection-h">
@@ -1151,7 +1332,3 @@
 	</div>
 		
 </section>
-<script type="text/javascript">
-	window.resizeHandler();
-	window.scrollTo(0,0);
-</script>
