--- a/app/partials/index.html
+++ b/app/partials/index.html
@@ -263,7 +263,7 @@
 </section>
 <script type="text/javascript">
 	window.resizeHandler();
-
+	window.scrollTo(0,0);
 
 	//Countdown
 	//@origin https://mindgrader.com/tutorials/1-how-to-create-a-simple-javascript-countdown-timer
