--- a/app/partials/index.html
+++ b/app/partials/index.html
@@ -49,113 +49,23 @@
 				<div class="w-blog imgpos_atleft more_hidden">
 					<div class="w-blog-h">
 						<div class="w-blog-list">
-						
-							<div class="w-blog-entry">
+							<div class="w-blog-entry" ng-repeat="new in news">
 								<div class="w-blog-entry-h">
-									<a class="w-blog-entry-link" href="blog-post.html">
-										<div class="w-blog-entry-preview">
-											<img src="img/placeholder/500x500.gif" alt="">
-										</div>
-
-										<h2 class="w-blog-entry-title">
-											<span class="w-blog-entry-title-h">This is a Post</span>
-										</h2>
-									</a>
 									<div class="w-blog-entry-body">
 										<div class="w-blog-entry-meta">
 											<div class="w-blog-entry-meta-date">
-												<span class="w-blog-entry-meta-date-month">Mar</span>
-												<span class="w-blog-entry-meta-date-day">23</span>
-												<span class="w-blog-entry-meta-date-year">2013</span>
+												<span class="w-blog-entry-meta-date-month" ng-bind="new.updated_at | date:'MMM'"></span>
+												<span class="w-blog-entry-meta-date-day" ng-bind="new.updated_at | date:'d'">23</span>
+												<span class="w-blog-entry-meta-date-year" ng-bind="new.updated_at | date:'yyyy'">2013</span>
 											</div>
 										</div>
-
-										<div class="w-blog-entry-short">
-											<p>Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida tortor, vel interdum mi sapien ut justo. Nulla varius consequat magna, id molestie ipsum volutpat quis. Suspendisse consectetur fringilla suctus. Working with us you will work with professional certified designers and engineers having the vast good experience.</p>
-										</div>
-
-									</div>
-								</div>
-							</div>
-
-							<div class="w-blog-entry">
-								<div class="w-blog-entry-h">
-									<a class="w-blog-entry-link" href="blog-post.html">
-										<div class="w-blog-entry-preview">
-											<img src="img/placeholder/500x500.gif" alt="">
-										</div>
-
-										<h2 class="w-blog-entry-title">
-											<span class="w-blog-entry-title-h">Another Single Interesting Post</span>
-										</h2>
-									</a>
-									<div class="w-blog-entry-body">
-										<div class="w-blog-entry-meta">
-											<div class="w-blog-entry-meta-date">
-												<span class="w-blog-entry-meta-date-month">Apr</span>
-												<span class="w-blog-entry-meta-date-day">16</span>
-												<span class="w-blog-entry-meta-date-year">2013</span>
+										<div ng-repeat="news_partials in new.data">
+												<h2 class="w-blog-entry-title" ng-if="news_partials.type=='PartialTitle'">
+													<span class="w-blog-entry-title-h" ng-bind="news_partials.title"></span>
+												</h2>
+											<div class="w-blog-entry-short" ng-if="news_partials.type=='PartialText'">
+												<p ng-bind-html="news_partials.text"></p>
 											</div>
-										</div>
-
-										<div class="w-blog-entry-short">
-											<p>Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida tortor, vel interdum mi sapien ut justo. Nulla varius consequat magna, id molestie ipsum volutpat quis. Suspendisse consectetur fringilla suctus. Working with us you will work with professional certified designers and engineers having the vast good experience.</p>
-										</div>
-
-									</div>
-								</div>
-							</div>
-
-							<div class="w-blog-entry">
-								<div class="w-blog-entry-h">
-									<a class="w-blog-entry-link" href="blog-post.html">
-										<div class="w-blog-entry-preview">
-											<img src="img/placeholder/500x500.gif" alt="">
-										</div>
-
-										<h2 class="w-blog-entry-title">
-											<span class="w-blog-entry-title-h">This is a Single Clean Post</span>
-										</h2>
-									</a>
-									<div class="w-blog-entry-body">
-										<div class="w-blog-entry-meta">
-											<div class="w-blog-entry-meta-date">
-												<span class="w-blog-entry-meta-date-month">Jul</span>
-												<span class="w-blog-entry-meta-date-day">8</span>
-												<span class="w-blog-entry-meta-date-year">2013</span>
-											</div>
-										</div>
-
-										<div class="w-blog-entry-short">
-											<p>Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida tortor, vel interdum mi sapien ut justo. Nulla varius consequat magna, id molestie ipsum volutpat quis. Suspendisse consectetur fringilla suctus. Working with us you will work with professional certified designers and engineers having the vast good experience.</p>
-										</div>
-
-									</div>
-								</div>
-							</div>
-
-							<div class="w-blog-entry">
-								<div class="w-blog-entry-h">
-									<a class="w-blog-entry-link" href="blog-post.html">
-										<div class="w-blog-entry-preview animate_afc">
-											<img src="img/placeholder/500x500.gif" alt="">
-										</div>
-
-										<h2 class="w-blog-entry-title">
-											<span class="w-blog-entry-title-h">This Post Looks Beautiful even with Long Interesting Title</span>
-										</h2>
-									</a>
-									<div class="w-blog-entry-body">
-										<div class="w-blog-entry-meta">
-											<div class="w-blog-entry-meta-date">
-												<span class="w-blog-entry-meta-date-month">Aug</span>
-												<span class="w-blog-entry-meta-date-day">23</span>
-												<span class="w-blog-entry-meta-date-year">2013</span>
-											</div>
-										</div>
-
-										<div class="w-blog-entry-short">
-											<p>Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida tortor, vel interdum mi sapien ut justo. Nulla varius consequat magna, id molestie ipsum volutpat quis. Suspendisse consectetur fringilla suctus. Working with us you will work with professional certified designers and engineers having the vast good experience.</p>
 										</div>
 
 									</div>
@@ -312,3 +222,14 @@
 	 
 	}, 1000);
 </script>
+<style type="text/css">
+	.w-blog.imgpos_atleft .w-blog-entry-body{
+		margin-left: 10%;
+	}
+	.w-blog.imgpos_atleft .w-blog-entry-title{
+		margin-left: -4%;
+	}
+	.w-blog-entry-title{
+		color: #f8862c;
+	}
+</style>
