improve menu, partials, ...

--- a/app/partials/prog-samedi.html
+++ b/app/partials/prog-samedi.html
@@ -8,8 +8,8 @@
 			
 				<h4><strong>Deux jours de folies</strong></h4>
 				
-				<a class="g-btn type_primary" href="#contact"><span>Vendredi 14 Juin</span></a>
-				<a class="g-btn type_primary" href="#contact"><span>Samedi 15 Juin</span></a>
+				<a class="g-btn type_primary" href="#programmation-ariege-n-zik-vendredi-14-juin-2014"><span>Vendredi 14 Juin</span></a>
+				<a class="g-btn type_primary" href="#programmation-ariege-n-zik-samedi-15-juin-2014"><span>Samedi 15 Juin</span></a>
 				
 			</div>
 		</div>
