--- a/app/partials/association.html
+++ b/app/partials/association.html
@@ -72,6 +72,26 @@
 		</div>
 	</div>
 		
+	<div class="l-subsection" style="background-image:url(img/placeholder/parallax.png);">
+		<div class="l-subsection-h" style="margin-top:50px;">
+			<div class="l-subsection-hh g-html i-cf">
+			
+				<h2 class="highlight"><strong>Devenir bénévole !</strong></h2>
+				
+				<div class="w-contacts">
+					<div class="w-contacts-h">
+						<div class="w-contacts-list">
+							<div class="w-contacts-item">
+								<i class="fa fa-envelope-o"></i>
+								<span class="w-contacts-item-value"><a href="mailto:FDLM@gmail.com?subject=Je souhaite devenir bénèvole" target="_blank">Postuler</a></span>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
 </section>
 <script type="text/javascript">
 	window.resizeHandler();
