--- a/app/partials/index.html
+++ b/app/partials/index.html
@@ -1,11 +1,11 @@
 <section id="home" class="l-section">
 	
-	<div id="parallax_subsection_0" class="l-subsection color_dark with_parallax" style="background-image:url(http://www.toulouseconcert.com/images/bg4.jpg);">
+	<div id="parallax_subsection_0" class="l-subsection color_dark with_parallax" style="background-image:url(img/fdlm/bg4.jpg);">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 
 				<h1 class="home-heading">
-					<span class="home-heading-line bold">Faites de la Musique</span>
+					<span class="home-heading-line bold">Ariège'n Zik</span>
 					<span class="home-heading-line">Le festival de musique en Ariège </span>
 				</h1>
 				
@@ -27,8 +27,8 @@
 				<span id="countdown">
 				</span>
 				<div>
-				<a class="g-btn type_default" href="#programmation-vendredi"><span> Programme du Vendredi 15 Juin</span></a>
-				<a class="g-btn type_default" href="#programmation-samedi"><span>Programme du Samedi 16 Juin</span></a>
+				<a class="g-btn type_default" href="#programmation-ariege-n-zik-vendredi-14-juin-2014"><span> Programme du Vendredi 15 Juin</span></a>
+				<a class="g-btn type_default" href="#programmation-ariege-n-zik-samedi-15-juin-2014"><span>Programme du Samedi 16 Juin</span></a>
 				</div>
 			</div>
 		</div>
@@ -42,7 +42,7 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 
-				<h2>Our Latest Posts</h2>
+				<h2>Les news</h2>
 				
 				<div class="g-hr type_invisible"></div>
 				
@@ -78,7 +78,7 @@
 				
 				<div class="g-hr type_invisible"></div>
 				
-				<a class="g-btn type_default size_small" href="https://www.facebook.com/pages/Faites-de-la-musique/531040120242024"><span><i class="fa fa-facebook"></i>Visiter notre Facebook</span></a>
+				<a class="g-btn type_default size_small" target="_blank" style="background-color:#3B5998;" href="https://www.facebook.com/pages/Faites-de-la-musique/531040120242024"><span><i class="fa fa-facebook"></i>Nous rejoindre sur Facebook</span></a>
 
 			</div>
 		</div>
