Worked on content

--- a/app/partials/archive.html
+++ b/app/partials/archive.html
@@ -19,7 +19,7 @@
 				<div class="g-hr type_invisible"></div>
 
 
-				<a class="g-btn type_primary size_big" href="#part-2" target="_self"><span>Continuez notre navigation</span></a>
+				<a class="g-btn type_primary size_big" href="#archive-faites-de-la-musique-fdlm-2013-part-2" target="_self"><span>Voir les groupes de 2013</span></a>
 				
 				
 			</div>
@@ -29,7 +29,7 @@
 </section>
 
 <!-- page: OUR TEAM -->
-<section id="part-2" class="l-section">
+<section id="archive-faites-de-la-musique-fdlm-2013-part-2" class="l-section">
 	
 	<div class="l-subsection">
 		<div class="l-subsection-h">
@@ -51,17 +51,14 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
+										<img src="img/fdlm/WhiteCardRadio-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name">Ruslan Sukhar</h4>
-										<div class="w-team-member-role">CEO</div>
-										<div class="w-team-member-links">
-											<div class="w-team-member-links-list">
-												<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-												<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-												<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-											</div>
+											<h4 class="w-team-member-name"><a href="#artiste/white-card-radio" target="_blank"><i class="fa fa-chevron-right"></i> White Card Radio</a></h4>
+										<h4 class="w-team-member-name"></h4>
+										<div class="w-team-member-role">Electro Impro Jazz</div>
+										<div class="w-team-member-role">
+											Présent le vendredi 21 Juin 2013 18h30-20h30 
 										</div>
 									</div>
 								</div>
@@ -70,17 +67,14 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
+										<img src="img/fdlm/LaTheorieDesCordes-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name">Aleksandr Kovalev</h4>
-											<div class="w-team-member-role">Senior designer</div>
-											<div class="w-team-member-links">
-												<div class="w-team-member-links-list">
-													<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-												</div>
+											<h4 class="w-team-member-name"><a href="#artiste/theorie-des-cordes" target="_blank"><i class="fa fa-chevron-right"></i> La théorie des Cordes</a></h4>
+											<div class="w-team-member-role">Rock Progressif - Jazz Rock</div>
+											<div class="w-team-member-role">
+												Présent le vendredi 21 Juin 2013 20h30-23h00 
 											</div>
 										</div>
 									</div>
@@ -90,17 +84,15 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
+										<img src="img/fdlm/GuitarHeroBeatmasher-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name">Roman Bayburin</h4>
-											<div class="w-team-member-role">Senior developer</div>
-											<div class="w-team-member-links">
-												<div class="w-team-member-links-list">
-													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-													<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-												</div>
+											<h4 class="w-team-member-name"><a href="#artiste/guitar-hero-beatmaster" target="_blank"><i class="fa fa-chevron-right"></i> Voir Guitar Hero Beatmasher</a></h4>
+											<h4 class="w-team-member-name"></h4>
+											<div class="w-team-member-role">Psybient - Rock Psychedelique</div>
+											<div class="w-team-member-role">
+												Présent le vendredi 21 Juin 2013 23h00-00h30 
 											</div>
 										</div>
 									</div>
@@ -110,19 +102,14 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
+										<img src="img/fdlm/Drivin-South-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name">Stepan Astionov</h4>
-											<div class="w-team-member-role">UX Expert</div>
-											<div class="w-team-member-links">
-												<div class="w-team-member-links-list">
-													<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-													<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-													<a class="w-team-member-links-item" href="http://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a>
-												</div>
+											<h4 class="w-team-member-name"><a href="#artiste/drivin-south" target="_blank"><i class="fa fa-chevron-right"></i> Voir Drivin' South</a></h4>
+											<div class="w-team-member-role">Blues Rock Funk</div>
+											<div class="w-team-member-role">
+												Présent le vendredi 21 Juin 2013 00h30-03h00 
 											</div>
 										</div>
 									</div>
@@ -135,14 +122,10 @@
 										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name">Olga Semenova</h4>
-										<div class="w-team-member-role">Manager</div>
-										<div class="w-team-member-links">
-											<div class="w-team-member-links-list">
-												<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-												<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-												<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-											</div>
+										<h4 class="w-team-member-name"><a href="#artiste/no-limit-paradox" target="_blank"><i class="fa fa-chevron-right"></i> Voir DJ NO Limit Paradox</a></h4>
+										<div class="w-team-member-role">Trance Progressive, Full on Night</div>
+										<div class="w-team-member-role">
+											Présent le vendredi 21 Juin 2013 03h00-05h00 
 										</div>
 									</div>
 								</div>
@@ -151,18 +134,44 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
+										<img src="img/fdlm/GastonFive-500x500.jpg" alt="member photo" />
+									</div>
+									<div class="w-team-member-meta">
+										<h4 class="w-team-member-name"><a href="#artiste/gaston-five" target="_blank"><i class="fa fa-chevron-right"></i> Voir Gaston Five</a></h4>
+										<div class="w-team-member-role">Rock</div>
+										<div class="w-team-member-role">
+											Présent le samedi 22 Juin 2013 18h30-21h00 
+										</div>
+										
+									</div>
+								</div>
+							</div>
+					
+							<div class="w-team-member">
+								<div class="w-team-member-h">
+									<div class="w-team-member-image">
 										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name">Ruslan Farkhutdinov</h4>
-											<div class="w-team-member-role">Designer</div>
-											<div class="w-team-member-links">
-												<div class="w-team-member-links-list">
-													<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-												</div>
-											</div>
+										<h4 class="w-team-member-name"><a href="#artiste/tremix" target="_blank"><i class="fa fa-chevron-right"></i> Voir Tremix</a></h4>
+										<div class="w-team-member-role">Ska Rock Balkan Reggae Swing</div>
+										<div class="w-team-member-role">
+											Présent le samedi 22 Juin 2013 21h00-00h00 
+										</div>
+									</div>
+								</div>
+							</div>
+					
+							<div class="w-team-member">
+								<div class="w-team-member-h">
+									<div class="w-team-member-image">
+										<img src="img/fdlm/DaKrewLab-500x500.jpg" alt="member photo" />
+									</div>
+									<div class="w-team-member-meta">
+										<h4 class="w-team-member-name">Da Krew Lab</h4>
+										<div class="w-team-member-role">Exp Electro Break Drum'n Tek</div>
+										<div class="w-team-member-role">
+											Présent le samedi 22 Juin 2013 00h00-01h45
 										</div>
 									</div>
 								</div>
@@ -174,15 +183,11 @@
 										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name">Yuliya Lebedeva</h4>
-											<div class="w-team-member-role">Developer</div>
-											<div class="w-team-member-links">
-												<div class="w-team-member-links-list">
-													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-													<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-												</div>
-											</div>
+										<h4 class="w-team-member-name"><a href="#artiste/tremix" target="_blank"><i class="fa fa-chevron-right"></i> Voir DJ Chill Bill</a></h4>
+										<div class="w-team-member-role">Funky Electro Break</div>
+											
+										<div class="w-team-member-role">
+											Présent le samedi 22 Juin 2013 01h45-03h45
 										</div>
 									</div>
 								</div>
@@ -194,33 +199,80 @@
 										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name">Alina Komarova</h4>
-											<div class="w-team-member-role">Manager</div>
-											<div class="w-team-member-links">
-												<div class="w-team-member-links-list">
-													<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-													<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-													<a class="w-team-member-links-item" href="http://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a>
-												</div>
-											</div>
+										<h4 class="w-team-member-name"><a href="#artiste/tremix" target="_blank"><i class="fa fa-chevron-right"></i> Voir DJ Psykoyot</a></h4>
+										<div class="w-team-member-role">Trance Trance full on Night</div>
+										<div class="w-team-member-role">
+											Présent le samedi 22 Juin 2013 03h45-04h30 puis 5h30-7h00
 										</div>
 									</div>
 								</div>
 							</div>
 					
+							<div class="w-team-member">
+								<div class="w-team-member-h">
+									<div class="w-team-member-image">
+										<img src="img/fdlm/Sychodelicious-500x500.jpg" alt="member photo" />
+									</div>
+									<div class="w-team-member-meta">
+										<h4 class="w-team-member-name"><a href="#artiste/synchodelicious" target="_blank"><i class="fa fa-chevron-right"></i> Voir Sychodelicious</a></h4>
+										<div class="w-team-member-role">Trance Trance full on Night</div>
+										<div class="w-team-member-role">
+											Présent le samedi 22 Juin 2013 04h30-05h30
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="g-hr type_invisible"></div>
 
-
-				<img src="vieassociative/1043926_622523037760398_534570403_n.jpg">
 			</div>
 		</div>
 	</div>
+</section>
+
+<!-- page: SERVICES -->
+<section id="services" class="l-section">
+	
+	
+	<div id="parallax_subsection_2" class="l-subsection color_dark with_parallax" style="background-image:url(img/placeholder/parallax.png);">
+		<div class="l-subsection-h">
+			<div class="l-subsection-hh g-html i-cf">
+			
+				<h3>Nos <strong>sponsors</strong> qui rendent l'évènement <strong>possible</strong></h3>
+				
+				<div class="w-clients type_carousel columns_5">
+					<div class="w-clients-h">
+						<div class="w-clients-list">
+							<div class="w-clients-list-h">
+								<a class="w-clients-item" href="javascript:void(0);">
+									<img src="http://www.chamonix.com/images/fiche/sitraCOS518219_353917_logo-super-u.gif" alt="Client logo" />
+								</a>
+								<a class="w-clients-item" href="javascript:void(0);">
+									<img src="http://www.annuaire-mairie.fr/panneau-malegoude.png" alt="Client logo" />
+								</a>
+								<a class="w-clients-item" href="javascript:void(0);">
+									<img src="http://www.chamonix.com/images/fiche/sitraCOS518219_353917_logo-super-u.gif" alt="Client logo" />
+								</a>
+								<a class="w-clients-item" href="javascript:void(0);">
+									<img src="http://www.chamonix.com/images/fiche/sitraCOS518219_353917_logo-super-u.gif" alt="Client logo" />
+								</a>
+								<a class="w-clients-item" href="javascript:void(0);">
+									<img src="http://www.chamonix.com/images/fiche/sitraCOS518219_353917_logo-super-u.gif" alt="Client logo" />
+								</a>
+							</div>
+						</div>
+						<a class="w-clients-nav to_prev disabled" href="javascript:void(0)" title="Show previous"></a>
+						<a class="w-clients-nav to_next" href="javascript:void(0)" title="Show next"></a>
+					</div>
+				</div>
+				
+			</div>
+		</div>
+	</div>
+
 </section>
 <script type="text/javascript">
 	window.resizeHandler();
