--- a/app/partials/index.html
+++ b/app/partials/index.html
@@ -60,11 +60,14 @@
 											</div>
 										</div>
 										<div ng-repeat="news_partials in new.data">
-												<h2 class="w-blog-entry-title" ng-if="news_partials.type=='PartialTitle'">
-													<span class="w-blog-entry-title-h" ng-bind="news_partials.title"></span>
-												</h2>
+											<h2 class="w-blog-entry-title" ng-if="news_partials.type=='PartialTitle'">
+												<span class="w-blog-entry-title-h" ng-bind="news_partials.title"></span>
+											</h2>
 											<div class="w-blog-entry-short" ng-if="news_partials.type=='PartialText'">
 												<p ng-bind-html="news_partials.text"></p>
+											</div>
+											<div class="flex-video widescreen" ng-if="news_partials.type=='PartialYoutube'">
+												<iframe ng-src="{{getSrcYoutube(news_partials.youtube_slug)}}" frameborder="0" allowfullscreen=""></iframe>
 											</div>
 										</div>
 
@@ -78,7 +81,7 @@
 				
 				<div class="g-hr type_invisible"></div>
 				
-				<a class="g-btn type_default size_small" target="_blank" style="background-color:#3B5998;" href="https://www.facebook.com/pages/Faites-de-la-musique/531040120242024"><span><i class="fa fa-facebook"></i>Nous rejoindre sur Facebook</span></a>
+				<a class="g-btn type_default size_small" target="_blank" style="background-color:#3B5998;" href="https://www.facebook.com/ariege.n.zic"><span><i class="fa fa-facebook"></i>Nous rejoindre sur Facebook</span></a>
 
 			</div>
 		</div>
@@ -232,4 +235,9 @@
 	.w-blog-entry-title{
 		color: #f8862c;
 	}
+	.flex-video{position:relative;padding-top:25px;padding-bottom:67.5%;height:0;margin-bottom:16px;margin:10px 0 16px 0;overflow:hidden}.flex-video.widescreen{padding-bottom:57.25%}
+	.flex-video.vimeo{padding-top:0}
+	.flex-video iframe,.flex-video object,.flex-video embed{position:absolute;top:0;left:0;width:100%;height:100%}
+	@media only screen and (max-device-width:800px),only screen and (device-width:1024px) and (device-height:600px),only screen and (width:1280px) and (orientation:landscape),only screen and (device-width:800px),only screen and (max-width:767px){.flex-video{padding-top:0}}.datepicker{padding:4px;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;direction:ltr;}
+
 </style>
