--- a/app/partials/artiste.html
+++ b/app/partials/artiste.html
@@ -9,7 +9,7 @@
 					<span class="home-heading-line bold">Wonderful Digital Things</span>
 					<span class="home-heading-line">and a pinch of creativity</span>
 				</h1>
-				<a class="g-btn type_primary size_big" href="#about"><span>Learn More</span></a>
+				<a class="g-btn type_primary size_big" smooth-scroll-jquery target="about" speed="1000"><span>Learn More</span></a>
 			</div>
 		</div>
 	</div>
