--- a/app/partials/archive.html
+++ b/app/partials/archive.html
@@ -5,8 +5,8 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
-				<p class="subtitle">L'association Faites de la Musique</p>
-				<h2 class="highlight"><strong>Lorem ipsum dolor </strong></h2>
+				<p class="subtitle">Changement de date, changement de nom</p>
+				<h2 class="highlight"><strong>Faites de la Musique devient Ariège'n Zic</strong></h2>
 				
 				<p class="size_big">Tandis que la Fdlm Team finit le démontage et le rangement de nos installations, nous nous retournons déjà avec une fierté mêlée de nostalgie sur ce week-end magique qui s'achève.<br>
 				Merci aux 600 participants qui ont honoré Malegoude de leur bonne humeur.<br>
@@ -19,7 +19,7 @@
 				<div class="g-hr type_invisible"></div>
 
 
-				<a class="g-btn type_primary size_big" href="#archive-faites-de-la-musique-fdlm-2013-part-2" target="_self"><span>Voir les groupes de 2013</span></a>
+				<a class="g-btn type_primary size_big green" smooth-scroll-jquery target="part-2" speed="1000"><span>Edition 2013 <i class="fa fa-arrow-down"></i></span></a>
 				
 				
 			</div>
@@ -29,7 +29,7 @@
 </section>
 
 <!-- page: OUR TEAM -->
-<section id="archive-faites-de-la-musique-fdlm-2013-part-2" class="l-section">
+<section id="part-2" class="l-section">
 	
 	<div class="l-subsection">
 		<div class="l-subsection-h">
