--- a/app/partials/prog-samedi.html
+++ b/app/partials/prog-samedi.html
@@ -8,8 +8,8 @@
 			
 				<h4><strong>Deux jours de folies</strong></h4>
 				
-				<a class="g-btn type_primary" href="#programmation-ariege-n-zik-vendredi-14-juin-2014"><span>Vendredi 14 Juin</span></a>
-				<a class="g-btn type_primary" href="#programmation-ariege-n-zik-samedi-15-juin-2014"><span>Samedi 15 Juin</span></a>
+				<a class="g-btn type_primary" href="#programmation-ariege-n-zik-vendredi-13-juin-2014"><span><i class="fa fa-reply"></i> Vendredi 13 Juin</span></a>
+				<a class="g-btn type_primary green" smooth-scroll-jquery target="samedi" speed="1000"><span>Samedi 14 Juin <i class="fa fa-arrow-down"></i></span></a>
 				
 			</div>
 		</div>
@@ -17,7 +17,7 @@
 </section>
 
 <!-- page: OUR TEAM -->
-<section id="team" class="l-section">
+<section id="samedi" class="l-section">
 	
 	<div class="l-subsection">
 		<div class="l-subsection-h">
