Add dependency and green button

--- a/app/partials/association.html
+++ b/app/partials/association.html
@@ -37,8 +37,8 @@
 				
 				<div class="g-hr type_invisible"></div>
 				
-				<a class="g-btn type_default" smooth-scroll-jquery target="adherent" speed="1000"><span><i class="fa fa-arrow-down"></i>Devenir membre</span></a>
-				<a class="g-btn type_default" smooth-scroll-jquery target="benevole" speed="1000"><span><i class="fa fa-arrow-down"></i>Devenir bénévoles</span></a>
+				<a class="g-btn type_primary green" smooth-scroll-jquery target="adherent" speed="1000"><span><i class="fa fa-arrow-down"></i>Devenir membre</span></a>
+				<a class="g-btn type_primary green" smooth-scroll-jquery target="benevole" speed="1000"><span><i class="fa fa-arrow-down"></i>Devenir bénévoles</span></a>
 				
 			</div>
 		</div>
