Add le premier jet du logo

--- a/app/partials/index.html
+++ b/app/partials/index.html
@@ -5,7 +5,7 @@
 			<div class="l-subsection-hh g-html i-cf">
 
 				<h1 class="home-heading">
-					<span class="home-heading-line bold">Ariège'n Zik</span>
+					<span class="home-heading-line bold">Ariège'n Zik</span><br>
 					<span class="home-heading-line">Le festival de musique en Ariège </span>
 				</h1>
 				
