--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -18,3 +18,15 @@ a:active {
 -webkit-transition: none;
 		transition: none;
 }
+
+.w-logo-img {
+    display: inline-block;
+    vertical-align: middle;
+    max-height: none;
+    height: 110px;
+    margin-top:1px;
+    position: absolute;
+    -ms-transform: rotate(-5deg); /* IE 9 */
+    -webkit-transform: rotate(-5deg); /* Chrome, Safari, Opera */
+    transform: rotate(-5deg);
+}
