add googlemap url +  improve popup

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 	
-	<div class="l-subsection full_height color_alternate">
+	<div class="l-subsection full_height color_alternate " style="background-image:url(img/placeholder/parallax.png);">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
