map : disable zoom with mouse wheel

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -29,7 +29,7 @@
 			
 				<div class="w-map">
 					<div id="contact-map" style="height: 400px;">
-						    <leaflet markers="markers" layers="layers" center="center"></leaflet>
+						    <leaflet markers="markers" defaults="defaults" layers="layers" center="center"></leaflet>
 					</div>
 				</div>
 			
