--- a/partials/contact.html
+++ b/partials/contact.html
@@ -23,13 +23,13 @@
 		</div>
 	</div>
 	
-	<div class="l-subsection full_height color_alternate">
+	<div class="l-subsection full_height color_alternate " style="background-image:url(img/placeholder/parallax.png);">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
 				<div class="w-map">
 					<div id="contact-map" style="height: 400px;">
-						    <leaflet markers="markers" layers="layers" center="center"></leaflet>
+						    <leaflet markers="markers" defaults="defaults" layers="layers" center="center"></leaflet>
 					</div>
 				</div>
 			
