Add markers and fix template on association

--- a/app/partials/association.html
+++ b/app/partials/association.html
@@ -44,6 +44,9 @@
 		</div>
 	</div>
 
+</section>
+<section class="next">
+	
 	<div class="l-subsection color_alternate" id="adherent">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
